@@ -17,6 +17,7 @@
 //  along with this program; if not, write to the Free Software
 //  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
+#include "gui_file_manager.hxx"
 #include "gui_directory_button.hxx"
 
 GUIDirectoryButton::GUIDirectoryButton (const std::string& arg_filename)
@@ -29,15 +30,31 @@ GUIDirectoryButton::~GUIDirectoryButton ()
 }
 
 void
-GUIDirectoryButton::draw (GraphicContext* gc)
+GUIDirectoryButton::draw (GraphicContext* parent_gc)
 {
-  gc->draw_string (50, 50, "Directory: " + filename);
+  //std::cout << "GUIDirectoryButton: " << filename << std::endl;
+  parent_gc->draw_fill_rect (x_pos, y_pos, 
+                             x_pos +  width, y_pos + height,
+                             Color (0xBB0000FF));
+
+  parent_gc->draw_string (x_pos + 40, y_pos + 20, "..:: Directory ::..");
+  parent_gc->draw_string (x_pos + 30, y_pos + 40, filename);
+
+  if (mouse_over)
+    parent_gc->draw_rect (x_pos, y_pos, 
+                          x_pos +  width, y_pos + height,
+                          Color (0xFFFFFFFF));
+  else
+    parent_gc->draw_rect (x_pos, y_pos, 
+                          x_pos +  width, y_pos + height,
+                          Color (0xFF0000FF));
 }
 
 void
 GUIDirectoryButton::on_click()
 {
   std::cout << "Click on GUIDirectoryButton detected" << std::endl;
+  GUIFileManager::instance()->open_directory(filename);
 }
 
 /* EOF */
