@@ -20,11 +20,13 @@ Construo 0.2.0
  
  * added optional glut support for hardware accelerated OpenGL
 
- * support for anti-aliased lines and transparency (only under OpenGL)
+ * support for anti-aliased lines and transparency (only under glut)
 
  * fixed particle physics, particle mass now has an impact
 
  * particle velocity editing is possible
+
+ * added file-manager with thumbnail preview
 
 
 Construo 0.1.0
